--- a/docs/modules/ROOT/pages/includes/quarkus-roq-data.adoc
+++ b/docs/modules/ROOT/pages/includes/quarkus-roq-data.adoc
@@ -42,5 +42,22 @@ endif::add-copy-button-to-env-var[]
 |boolean
 |`false`
 
+a|icon:lock[title=Fixed at build time] [[quarkus-roq-data_quarkus-roq-data-log-data-beans]] [.property-path]##link:#quarkus-roq-data_quarkus-roq-data-log-data-beans[`quarkus.roq.data.log-data-beans`]##
+
+[.description]
+--
+Log data beans as info during build
+
+
+ifdef::add-copy-button-to-env-var[]
+Environment variable: env_var_with_copy_button:+++QUARKUS_ROQ_DATA_LOG_DATA_BEANS+++[]
+endif::add-copy-button-to-env-var[]
+ifndef::add-copy-button-to-env-var[]
+Environment variable: `+++QUARKUS_ROQ_DATA_LOG_DATA_BEANS+++`
+endif::add-copy-button-to-env-var[]
+--
+|boolean
+|`true`
+
 |===
 
