--- a/docs/modules/ROOT/pages/quarkus-roq-plugins.adoc
+++ b/docs/modules/ROOT/pages/quarkus-roq-plugins.adoc
@@ -130,3 +130,25 @@ To install it add:
 ----
 
 Once done, every file with either '.md' or '.markdown' extension will be processed.
+
+[#plugin-qrcode]
+== Roq Plugin QR Code
+
+This plugin allows you to add a QR Code to your website.
+
+To install it add:
+[source,xml,subs=attributes+]
+----
+<dependency>
+    <groupId>io.quarkiverse.roq</groupId>
+    <artifactId>quarkus-roq-plugin-qrcode</artifactId>
+    <version>{project-version}</version>
+</dependency>
+----
+
+Then create a template and add the `{#qrcode ...}` tag to it and style and size it as you want.
+
+[source,yaml]
+----
+{#qrcode value="https://luigis.com/menu/" alt="Luigi's Menu" foreground="#000066" background="#FFFFFF" width=300 height=300 /}
+----
