Series plugin blog post
Also enable futur blog posts for PRs

--- a/blog/content/posts/2024-12-06-series.adoc
+++ b/blog/content/posts/2024-12-06-series.adoc
@@ -1,6 +1,6 @@
 ---
 layout: :theme/post
-title: Want to a blog post series ?
+title: Do you want to publish a blog post series ?
 image: https://images.unsplash.com/photo-1516031391404-50a63b60f9f6?q=80&w=3870&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D
 description: Make your blog posts part of a series.
 author: jtama
