--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -1,6 +1,6 @@
-= Quarkus Roq
+include::./_includes/attributes.adoc[]
 
-include::./includes/attributes.adoc[]
+= Quarkus Roq
 
 Roq allows to easily create a static website or blog using Quarkus super-powers.
 
@@ -52,22 +52,21 @@ Thanks to Qute, Roq offers code completion, which is beneficial when working in 
 *https://code.quarkus.io/?a=roq-with-blog&e=io.quarkiverse.roq%3Aquarkus-roq[Click here,window=_blank]  to generate your Roq Starter App.*
 
 or use the https://quarkus.io/guides/cli-tooling[Quarkus CLI,window=_blank]:
-[source,shell]
+[source,console]
 ----
 quarkus create app roq-with-blog -x=io.quarkiverse.roq:quarkus-roq
 ----
 
 Then
 
-[source,shell]
+[source,console]
 ----
 cd roq-with-blog
 quarkus dev
 ----
 
-include::includes/getting-started-frontmatter.adoc[]
 
-include::includes/github-pages.adoc[]
+include::_includes/github-pages.adoc[]
 
 [[custom-roq-dir]]
 == Configure a custom Roq directory
@@ -90,4 +89,4 @@ quarkus.roq.dir=my-site
 == Extension Configuration Reference
 
 
-include::includes/quarkus-roq.adoc[leveloffset=+1, opts=optional]
+include::_includes/quarkus-roq.adoc[leveloffset=+1, opts=optional]
