--- a/docs/modules/ROOT/pages/index.adoc
+++ b/docs/modules/ROOT/pages/index.adoc
@@ -4,89 +4,17 @@ include::./_includes/attributes.adoc[]
 
 Roq allows to easily create a static website or blog using Quarkus super-powers.
 
-== How it works
+The documentation is available in the https://pages.quarkiverse.io/quarkus-roq/docs/getting-started[Roq website].
 
-// https://excalidraw.com/#json=pZssfxY47ooeLKkHeH0cM,7jxUkcUdHu3WcR1ktCRFow
-image::roq-how-it-works.png[Roq - How it works]
-
-[TIP]
-====
 Roq depends on a set of extensions which can also be used standalone:
 
 * xref:quarkus-roq-data.adoc[*Roq Data*]: Use json/yaml files content from your templates and articles with type safety.
 * xref:quarkus-roq-frontmatter.adoc[*Roq FrontMatter*]:  Create a website from your Markdown/Asciidoc/Html pages using FrontMatter headers (url, layout, seo, data).
 * xref:quarkus-roq-generator.adoc[*Roq Generator*]: Command to run any Quarkus web application and extract it in a directory as purely static files (html and assets).
-====
-
-== Advantages of Roq
-
-Knowing that *you don't need to learn Quarkus or Java* to use Roq, consider the following advantages:
-
-1. *Quarkus-based*:
-Since Roq is just a very thin layer on top of Quarkus, it ensures that the tool stays up to date and benefits from the robust support provided by the Quarkus ecosystem.
-
-2. *For everyone*:
-It is very easy to use with any level of knowledge. You can start with an existing theme (as a dependency) and only write Markdown or Asciidoc content, or customize everything.
-
-3. *Reproducibility Across Platforms*:
-Unlike some other SSG, Roq offers better reproducibility across multiple platforms, ensuring more consistent and predictable results when building or deploying.
-
-4. *Easy to maintain*:
-Managing dependencies and updates is easier with Roq thanks to Maven and Gradle. Other systems such as Go or Ruby can be difficult to maintain and make reproducible across environments.
-
-5. *Speed*:
-Roq is using Quarkus for dev and build. Quarkus is famous for being supersonic and subatomic, with one example showing a Roq site build in just 20 milliseconds, greatly reducing build times compared to traditional generators.
-
-6. *Type Safety (via Qute templates)*:
-Roq leverages Quarkus Qute's type safety in templates and posts, making it easier to handle links, data injection, and other dynamic content with confidence.
-
-7. *Local Development Experience*:
-Roq provides a smoother local development experience without the need to "test in production," as is often necessary with other SSGs due to its difficulties in running locally.
-
-8. *Code Completion* (coming soon):
-Thanks to Qute, Roq offers code completion, which is beneficial when working in templates, helping to reduce errors and improve developer productivity.
-
-[#generate]
-== Get up and running with Roq
-
-*https://code.quarkus.io/?a=roq-with-blog&e=io.quarkiverse.roq%3Aquarkus-roq[Click here,window=_blank]  to generate your Roq Starter App.*
-
-or use the https://quarkus.io/guides/cli-tooling[Quarkus CLI,window=_blank]:
-[source,console]
-----
-quarkus create app roq-with-blog -x=io.quarkiverse.roq:quarkus-roq
-----
-
-Then
-
-[source,console]
-----
-cd roq-with-blog
-quarkus dev
-----
-
-
-include::_includes/github-pages.adoc[]
-
-[[custom-roq-dir]]
-== Configure a custom Roq directory
-
-It can be located in a resource directory such as `src/main/resources/my-site`:
-[source,properties]
-.application.properties
-----
-quarkus.roq.resource-dir=my-site
-----
-
-or in your project directory such as `my-site`:
-[source,properties]
-.application.properties
-----
-quarkus.roq.dir=my-site
-----
 
 [[extension-configuration-reference]]
 == Extension Configuration Reference
 
+include::_includes/quarkus-roq-frontmatter_site.adoc[leveloffset=+1, opts=optional]
 
 include::_includes/quarkus-roq.adoc[leveloffset=+1, opts=optional]
